--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -38,6 +38,7 @@ $dropdown-divider-background-color: $border-light !default
       padding-top: initial
       top: auto
 
+
 .dropdown-menu
   display: none
   +ltr-position(0, false)
@@ -61,6 +62,10 @@ $dropdown-divider-background-color: $border-light !default
   line-height: 1.5
   padding: 0.375rem 1rem
   position: relative
+  &.is-disabled
+    color: $grey
+    cursor: default
+    pointer-events: none
 
 a.dropdown-item,
 button.dropdown-item
