--- a/sass/helpers/flexbox.sass
+++ b/sass/helpers/flexbox.sass
@@ -1,3 +1,5 @@
+@import "../utilities/derived-variables"
+
 $flex-direction-values: row, row-reverse, column, column-reverse
 @each $value in $flex-direction-values
   .is-flex-direction-#{$value}
@@ -27,6 +29,11 @@ $align-self-values: auto, flex-start, flex-end, center, baseline, stretch
 @each $value in $align-self-values
   .is-align-self-#{$value}
     align-self: $value !important
+
+@each $size in $sizes
+  $i: index($sizes, $size)
+  .is-gap-#{$i}
+    gap: calc($size / 3) !important
 
 $flex-operators: grow, shrink
 @each $operator in $flex-operators
