Removed the include tag at the end of message.html
This include tag is not necessary, since the layout for the docs already includes it, and results in duplication.

--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -204,5 +204,4 @@ endfor %} {% include docs/elements/anchor.html name="Sizes" %}
 {% include docs/elements/snippet.html content=message_small %} {% include
 docs/elements/snippet.html content=message_normal %} {% include
 docs/elements/snippet.html content=message_medium %} {% include
-docs/elements/snippet.html content=message_large %} {% include
-docs/components/variables.html type='component' %}
+docs/elements/snippet.html content=message_large %}
