--- a/sass/elements/button.scss
+++ b/sass/elements/button.scss
@@ -84,7 +84,7 @@ $button-responsive-sizes: (
   ),
 ) !default;
 
-$no-palette: ("white", "black", "light", "dark");
+$button-no-palette: ("white", "black", "light", "dark");
 
 .#{iv.$class-prefix}button {
   @include cv.register-vars(
@@ -331,7 +331,7 @@ $no-palette: ("white", "black", "light", "dark");
         @include cv.register-var("button-border-width", 1px);
       }
 
-      @if not list.index($no-palette, $name) {
+      @if not list.index($button-no-palette, $name) {
         &.#{iv.$class-prefix}is-light {
           @include cv.register-vars(
             (
