update font-family variables

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -21033,23 +21033,23 @@ has-background-danger.is-hoverable:active {
 }
 
 .is-family-primary {
-  font-family: "Inter", "SF Pro", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  font-family: var(--bulma-family-primary) !important;
 }
 
 .is-family-secondary {
-  font-family: "Inter", "SF Pro", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  font-family: var(--bulma-family-secondary) !important;
 }
 
 .is-family-sans-serif {
-  font-family: "Inter", "SF Pro", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  font-family: var(--bulma-family-primary) !important;
 }
 
 .is-family-monospace {
-  font-family: "Inconsolata", "Hack", "SF Mono", "Roboto Mono", "Source Code Pro", "Ubuntu Mono", monospace !important;
+  font-family: var(--bulma-family-code) !important;
 }
 
 .is-family-code {
-  font-family: "Inconsolata", "Hack", "SF Mono", "Roboto Mono", "Source Code Pro", "Ubuntu Mono", monospace !important;
+  font-family: var(--bulma-family-code) !important;
 }
 
 .is-display-none,
