fix: themes were missing from no-helpers versions
Fixes: https://github.com/jgthms/bulma/issues/3894

--- a/versions/bulma-no-helpers-prefixed.scss
+++ b/versions/bulma-no-helpers-prefixed.scss
@@ -4,6 +4,7 @@
 @use "../sass/utilities" with (
   $class-prefix: "bulma-"
 );
+@forward "../sass/themes";
 @forward "../sass/base";
 @forward "../sass/elements";
 @forward "../sass/form";
