--- a/versions/bulma-no-helpers.scss
+++ b/versions/bulma-no-helpers.scss
@@ -2,6 +2,7 @@
 
 /*! bulma.io v1.0.2 | MIT License | github.com/jgthms/bulma */
 @forward "../sass/utilities";
+@forward "../sass/themes";
 @forward "../sass/base";
 @forward "../sass/elements";
 @forward "../sass/form";
