--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -482,9 +482,8 @@ name="Combining" %}
 </div>
 
 {% include docs/elements/snippet.html content=tabs_centered_boxed_example
-horizontal=true more=true %} {% include docs/elements/snippet.html
-content=tabs_toggle_fullwidth_example horizontal=true more=true %} {% include
-docs/elements/snippet.html content=tabs_centered_boxed_medium_example
-horizontal=true more=true %} {% include docs/elements/snippet.html
-content=tabs_toggle_fullwidth_large_example horizontal=true more=true %} {%
-include docs/components/variables.html type='component' %}
+horizontal=true more=true %}
+{% include docs/elements/snippet.html content=tabs_toggle_fullwidth_example horizontal=true more=true %}
+{% include docs/elements/snippet.html content=tabs_centered_boxed_medium_example
+horizontal=true more=true %}
+{% include docs/elements/snippet.html content=tabs_toggle_fullwidth_large_example horizontal=true more=true %}
