--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -15,6 +15,7 @@ meta:
   colors: false
   sizes: true
   variables: true
+  hide_css_vars: true
 ---
 
 {% capture container_example %}
@@ -310,6 +311,4 @@ maximum widths" %}
 
 <div class="bd-example is-fullwidth">{{ container_fluid_example }}</div>
 
-{% highlight html -%} {{- container_fluid_example -}} {%- endhighlight %} {%
-include docs/components/variables.html type='element'
-data=site.data.variables.elements.container %}
+{% highlight html -%} {{- container_fluid_example -}} {%- endhighlight %}
