--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -9,6 +9,8 @@ breadcrumb:
   - documentation
   - layout
   - layout-footer
+meta:
+  variables: true
 ---
 {% capture footer_example %}
 <footer class="footer">
