--- a/docs/documentation/layout/level.html
+++ b/docs/documentation/layout/level.html
@@ -9,6 +9,9 @@ breadcrumb:
   - documentation
   - layout
   - layout-level
+meta:
+  variables: true
+  hide_css_vars: true
 ---
 {% capture nav_example %}
 <!-- Main container -->
