--- a/docs/documentation/layout/media-object.html
+++ b/docs/documentation/layout/media-object.html
@@ -9,6 +9,8 @@ breadcrumb:
   - documentation
   - layout
   - layout-media
+meta:
+  variables: true
 ---
 {% capture media_example %}
 <article class="media">
