--- a/docs/documentation/layout/section.html
+++ b/docs/documentation/layout/section.html
@@ -10,6 +10,8 @@ breadcrumb:
   - documentation
   - layout
   - layout-section
+meta:
+  variables: true
 ---
 {% capture section_example %}
 <section class="section">
